# Professional-Cpp-5th-Answer

./: .gitignore  CMakeLists.txt  README.md  module.cmake
.devcontainer/: devcontainer.json
ModuleTest/: CMakeLists.txt  README.md  a.cppm  main.cpp
chapter-1/: CMakeLists.txt  README.md
chapter-1/1-1/: CMakeLists.txt  employee.cppm  main.cpp
chapter-1/1-2/: CMakeLists.txt  employee.cppm  main.cpp
chapter-1/1-3/: CMakeLists.txt  main.cpp
chapter-1/1-4/: CMakeLists.txt  main.cpp
chapter-1/1-5/: AirlineTicket.cpp  AirlineTicket.cppm  CMakeLists.txt  main.cpp
chapter-1/1-6/: AirlineTicket.cpp  AirlineTicket.cppm  CMakeLists.txt  main.cpp
chapter-10/: CMakeLists.txt  README.md
chapter-10/10-1/: CMakeLists.txt  director.cppm  employee.cppm  main.cpp  manager.cppm  person.cppm
chapter-10/10-2/: CMakeLists.txt  director.cppm  employee.cppm  main.cpp  manager.cppm  person.cppm
chapter-10/10-3/: CMakeLists.txt  director.cppm  employee.cppm  main.cpp  person.cppm
chapter-10/10-4/: CMakeLists.txt  director.cppm  hr.cppm  main.cpp  manager.cppm  person.cppm
chapter-11/: CMakeLists.txt  README.md
chapter-11/11-1/: CMakeLists.txt  Simulator.cppm
chapter-11/11-2/: CMakeLists.txt  Simulator.cpp  Simulator.cppm
chapter-11/11-3/: CMakeLists.txt  Simulator.bike.cppm  Simulator.car.cppm  Simulator.cppm  main.cpp
chapter-11/11-4/: CMakeLists.txt  Simulator.bike.cppm  Simulator.car.cppm  Simulator.internals.cppm
chapter-12/: CMakeLists.txt  README.md
chapter-12/12-1/: CMakeLists.txt  KeyValuePair.cppm  main.cpp
chapter-12/12-2/: main.cpp  (+4 more)
chapter-12/12-6/: CMakeLists.txt  FindTemplate.cpp  SpreadsheetCell.cppm
chapter-13/: CMakeLists.txt  README.md
chapter-14/: README.md
chapter-15/: README.md
chapter-16/: README.md
chapter-17/: README.md
chapter-18/: README.md
chapter-19/: README.md
chapter-2/: CMakeLists.txt  README.md
chapter-2/2-3/: CMakeLists.txt  main.cpp
chapter-20/: README.md
chapter-21/: README.md
chapter-22/: README.md
chapter-23/: README.md
chapter-24/: README.md
chapter-25/: README.md
chapter-26/: README.md
chapter-27/: README.md
chapter-28/: README.md
chapter-29/: README.md
chapter-3/: README.md
chapter-30/: README.md
chapter-31/: README.md
chapter-32/: README.md
chapter-33/: README.md
chapter-34/: README.md
chapter-4/: README.md
chapter-5/: README.md
chapter-6/: README.md
chapter-7/: CMakeLists.txt  README.md
chapter-8/: CMakeLists.txt  README.md
chapter-9/: CMakeLists.txt  README.md
(+41 files in other folders)
