CMAKE_MINIMUM_REQUIRED(VERSION 3.25)

project(PCTA)

add_subdirectory(chapter-1)
add_subdirectory(chapter-2)
add_subdirectory(chapter-7)
add_subdirectory(chapter-8)
add_subdirectory(chapter-9)
add_subdirectory(chapter-10)
add_subdirectory(chapter-11)
add_subdirectory(chapter-12)
add_subdirectory(chapter-13)